tester/testsuite/good/core021.jl
int main() {
    if (true) {
      printInt(1);
      return 0;
    }
}